objects/User.object
<CustomObject>
    <fields>
        <fullName>Target_User_Value_Total__c</fullName>
        <description>annual target total pipeline</description>
        <label>Target User Value (Total)</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Target_User_Value__c</fullName>
        <description>annual target opp value</description>
        <label>Target User Value</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Te_Network_Id__c</fullName>
        <description>This field contains the users TE Network Id.</description>
        <label>Te Network Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Territory_Code__c</fullName>
        <description>This field contains the territory code of the user.</description>
        <externalId>true</externalId>
        <label>Territory Code</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Test123__c</fullName>
        <formula>IF(CONTAINS(UserRole.Name, &quot;PIC EMEA Agents&quot;), &quot;PIC Emea&quot;, 
IF(CONTAINS(UserRole.Name, &quot;PIC APAC Agents&quot;), &quot;PIC China&quot;, 
IF(CONTAINS(UserRole.Name, &quot;PIC AMER Agents&quot;), &quot;PIC US&quot;, 
IF(CONTAINS(UserRole.Name, &quot;PIC Germany (Temp solution)&quot;), &quot;PIC German&quot;, 
IF(CONTAINS(UserRole.Name, &quot;PIC EMEA Supervisors &amp; Managers&quot;), &quot;PIC EMEA Supervisors &amp; Managers&quot;, 
IF(CONTAINS(UserRole.Name, &quot;PIC APAC Supervisors/Managers &quot;), &quot;PIC APAC Supervisors/Managers&quot;, 
IF(CONTAINS(UserRole.Name, &quot;PIC AMER Supervisors/Managers&quot;), &quot;PIC AMER Supervisors/Managers&quot;, 
IF(CONTAINS(UserRole.Name, &quot;PIC APAC RL/Directors&quot;), &quot;PIC APAC RL/Directors&quot;, 
IF(CONTAINS(UserRole.Name, &quot;PIC EMEA RL/Directors &quot;), &quot;PIC APAC RL/Directors&quot;, 
IF(CONTAINS(UserRole.Name, &quot;Inside Sales&quot;), &quot;PIC Inside Sales&quot;, 
IF(CONTAINS(UserRole.Name, &quot;Global Admin&quot;), &quot; PIC Global Admin&quot;, 
&quot;N/A&quot;)))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Test123</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_License_Name__c</fullName>
        <formula>Profile.UserLicense.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User License Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Region__c</fullName>
        <label>User Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NAM</fullName>
                </value>
                <value>
                    <fullName>LAM</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>ROA</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>ANZ</fullName>
                </value>
                <value>
                    <fullName>CORPORATE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Setup_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>User Setup Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>qbdialer__InsideSales_Admin__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the user is an admin of the InsideSales system.</description>
        <label>InsideSales Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>qbdialer__is_subdomain__c</fullName>
        <label>InsideSales Subdomain</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qbdialer__is_token__c</fullName>
        <label>InsideSales Authorization Token</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qbdialer__password__c</fullName>
        <label>InsideSales Password</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qbdialer__permissions__c</fullName>
        <label>InsideSales Permissions</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>qbdialer__username__c</fullName>
        <label>InsideSales Username</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>target_user_value_open__c</fullName>
        <description>target user value (open)</description>
        <label>Target User Value (open)</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <listViews>
        <fullName>AD_M_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GIBU__c</field>
            <operation>equals</operation>
            <value>AD&amp;M</value>
        </filters>
        <label>AD&amp;M Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AD_M_Users_Active1</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Region__c</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>Te_Network_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GIBU__c</field>
            <operation>equals</operation>
            <value>AD&amp;M</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>AD&amp;M Users Active</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.NAME</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Admin Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Active_Users</fullName>
        <columns>EMPLOYEE_NUMBER</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notEqual</operation>
        </filters>
        <label>All Active Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Appliance_Incative_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GIBU__c</field>
            <operation>equals</operation>
            <value>Appliances</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Appliance Inactive Users</label>
        <language>en_US</language>
        <sharedTo>
            <group>Administrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Appliance_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GIBU__c</field>
            <operation>equals</operation>
            <value>Appliances</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Appliance Users</label>
        <language>en_US</language>
        <sharedTo>
            <group>Administrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BU_Admin</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>BU Admin</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>BU Admin</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BU_Analyst</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>BU Analyst</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>BU Analyst</label>
    </listViews>
    <listViews>
        <fullName>CJM_Team_Members</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CJM_Team_Member__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>CJM Team Members</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CSD_User</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CSD_Region__c</columns>
        <columns>PLM_User__c</columns>
        <columns>GIBU__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>UPDATEDBY_USER.NAME</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GIBU__c</field>
            <operation>equals</operation>
            <value>Consumer Devices</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notContain</operation>
            <value>Care Service Cloud</value>
        </filters>
        <label>CSD User</label>
    </listViews>
    <listViews>
        <fullName>Channel_BU_Admin</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>BU Admin</value>
        </filters>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>contains</operation>
            <value>channel</value>
        </filters>
        <label>Channel BU Admin</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Channel_Inside_Sales</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Channel Inside Sales</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Channel Inside Sales</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Chatter_Plus_User</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>User_License_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>User_License_Name__c</field>
            <operation>contains</operation>
            <value>Chatter</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Chatter Plus</value>
        </filters>
        <label>Chatter+ User</label>
        <language>en_US</language>
        <sharedTo>
            <group>Administrators</group>
            <group>BU_Admin</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DND_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>UPDATEDBY_USER.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GIBU__c</field>
            <operation>equals</operation>
            <value>Data &amp; Devices</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>DND Users</label>
        <language>en_US</language>
    </listViews>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Country_Required_Except_Chatter_Free</fullName>
        <active>true</active>
        <description>Must pick a Country unless the user is Chatter Free or System Admin or Service Account</description>
        <errorConditionFormula>AND(ISBLANK(Country),
			ISPICKVAL( GIBU__c , &apos;AD&amp;M&apos;),
			$Profile.Name &lt;&gt; &quot;System Administrator&quot;, 
		$Profile.Name &lt;&gt; &quot;Systemadministrator&quot;, 
		$Profile.Name &lt;&gt; &quot;Service Account&quot;, 
		$Profile.Name &lt;&gt; &quot;BU Admin&quot;, 
		$Profile.Name &lt;&gt; &quot;Partner Admin&quot;, 
		$Profile.Name &lt;&gt; &quot;Service Account&quot;, 
		$Profile.Name &lt;&gt; &quot;Production Support&quot;)</errorConditionFormula>
        <errorDisplayField>Country</errorDisplayField>
        <errorMessage>Please enter a Countryy</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Employee_Nbr_Rqd_for_TE_Employees</fullName>
        <active>true</active>
        <description>If the email address contains &apos;@te.com&apos; then the employee number is required. Unless the profile is Chatter Free User or Service Account Profile</description>
        <errorConditionFormula>AND(CONTAINS(Email,&quot;@te.com&quot;),ISBLANK(Te_Network_Id__c),
		ISPICKVAL( GIBU__c , &quot;AD&amp;M&quot;),
		$Profile.Name &lt;&gt; &quot;System Administrator&quot;, 
		$Profile.Name &lt;&gt; &quot;Systemadministrator&quot;, 
		$Profile.Name &lt;&gt; &quot;Service Account&quot;, 
		$Profile.Name &lt;&gt; &quot;BU Admin&quot;, 
		$Profile.Name &lt;&gt; &quot;Partner Admin&quot;, 
		$Profile.Name &lt;&gt; &quot;Service Account&quot;, 
		$Profile.Name &lt;&gt; &quot;Production Support&quot;)</errorConditionFormula>
        <errorDisplayField>EmployeeNumber</errorDisplayField>
        <errorMessage>Employee Number must be entered for TE employees who are not Chatter Free licenses or Service Accounts</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Expiration_date</fullName>
        <active>true</active>
        <description>It checks the user Expiration date with in one year or not</description>
        <errorConditionFormula>AND(
OR((Expiration_date__c- TODAY() &gt; 365), (Expiration_date__c &lt; TODAY())),  IsActive = TRUE
)</errorConditionFormula>
        <errorDisplayField>Expiration_date__c</errorDisplayField>
        <errorMessage>Expiration date must be with in one year</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MED_Region_Required_for_MED</fullName>
        <active>true</active>
        <description>For users with GIBU=Medical, MED_Region__c is required</description>
        <errorConditionFormula>AND
(ISPICKVAL(GIBU__c,&quot;Medical&quot;), 
 ISPICKVAL(MED_Region__c,&quot;&quot;)
)</errorConditionFormula>
        <errorDisplayField>MED_Region__c</errorDisplayField>
        <errorMessage>Select a MED Region.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Region_Required_Except_Chatter_Free</fullName>
        <active>true</active>
        <description>Must pick a Region unless the user is Chatter Free, sys admin, service account</description>
        <errorConditionFormula>AND(ISBLANK(TEXT(Region__c)),
    ISPICKVAL(GIBU__c , &apos;AD&amp;M&apos;),
    $Profile.Name &lt;&gt; &quot;System Administrator&quot;, 
	$Profile.Name &lt;&gt; &quot;Systemadministrator&quot;, 
	$Profile.Name &lt;&gt; &quot;Service Account&quot;, 
	$Profile.Name &lt;&gt; &quot;BU Admin&quot;, 
	$Profile.Name &lt;&gt; &quot;Partner Admin&quot;, 
	$Profile.Name &lt;&gt; &quot;Service Account&quot;, 
	$Profile.Name &lt;&gt; &quot;Production Support&quot;
    )</errorConditionFormula>
        <errorDisplayField>Region__c</errorDisplayField>
        <errorMessage>Please select a User Region</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Required_APAC_Office</fullName>
        <active>true</active>
        <description>this created for IR-00507</description>
        <errorConditionFormula>AND(ISPICKVAL(APAC_Office__c,&quot;&quot;), 
Profile.Name=&quot;Customer Care Service Cloud&quot;, 
NOT(CONTAINS(UserRole.Name ,&apos;CSSC&apos;)), 
OR(ISPICKVAL(Region__c,&quot;China&quot;), 
ISPICKVAL(Region__c,&quot;Japan&quot;), 
ISPICKVAL(Region__c,&quot;Asia Pacific&quot;) 
) 
)</errorConditionFormula>
        <errorDisplayField>APAC_Office__c</errorDisplayField>
        <errorMessage>Please Enter APAC Office</errorMessage>
    </validationRules>
</CustomObject>